fix binary mask issues; plotting tweaks

--- a/notebook/how_to_measure_RV.ipynb
+++ b/notebook/how_to_measure_RV.ipynb
@@ -15,9 +15,9 @@
     "- **Megan Bedell** (Flatiron)\n",
     "\n",
     "## To-Do:\n",
-    "- Make it so all key figures save as pdf files for inclusion in the paper.\n",
-    "- Merge binary-mask regions that overlap? Use a center-of-mass consideration.\n",
-    "- Start experiments that test sensitivities to assumptions."
+    "- Reduce repeated code when it comes to plotting spectra (many things repeated).\n",
+    "- Fix formatting of v_r in plot titles? Include units there too?\n",
+    "- Make sure everything is in terms of radial velocity v_r and not Doppler shift delta x."
    ]
   },
   {
@@ -171,7 +171,7 @@
     "js = [3, 17]\n",
     "for j,ax in zip(js,axes):\n",
     "    ax.step(xs, ys[j], color=\"k\", where=\"mid\", alpha=0.9)\n",
-    "    ax.set_title(\"epoch {}; $\\delta x = {:+f}$\".format(j, true_dopplers[j]))\n",
+    "    ax.set_title(\"epoch {}; $v_r = {:+f}$\".format(j, c * true_dopplers[j]))\n",
     "    ax.set_ylabel(r\"flux $y$\")\n",
     "ax.set_xlabel(r\"ln wavelength $x=\\ln\\,\\lambda$\")\n",
     "plt.xlim(x_min, x_max)\n",
@@ -199,7 +199,7 @@
     "axes[1].set_xlim(8.702, 8.703)\n",
     "axes[0].set_ylim(-0.1, 1.1)\n",
     "axes[1].set_xlabel(r\"ln wavelength $x=\\ln\\,\\lambda$\")\n",
-    "axes[0].set_title(\"epoch {}; $\\delta x = {:+f}$\".format(j, true_dopplers[j]))\n",
+    "axes[0].set_title(\"epoch {}; $v_r = {:+f}$\".format(j, c * true_dopplers[j]))\n",
     "fig.savefig(\"datazoom.png\")"
    ]
   },
@@ -288,6 +288,7 @@
    "outputs": [],
    "source": [
     "# get the CCF RV for one epoch\n",
+    "j = 7\n",
     "ccs = cross_correlation_function(dopplers, xs, ys[j])[0]\n",
     "ddp = np.arange(true_dopplers[j] - 1.5 / R, true_dopplers[j] + 1.5 / R, 0.01 / R)\n",
     "best_doppler, ccp = hogg_parabola_trick(ccs, dopplers, ddp)\n",
@@ -311,7 +312,7 @@
     "        ax.plot(c * dopplers, ccs, \"k.\", alpha=0.9)\n",
     "    axes[0].set_xlim(-3.2e4, 3.2e4)\n",
     "    axes[1].set_xlim(c * doppler - 3000., c * doppler + 3000.)\n",
-    "    axes[0].set_xlabel(r\"Doppler shift $c\\,\\delta x$ (m/s)\")\n",
+    "    axes[0].set_xlabel(r\"radial velocity $v_r$ (m/s)\")\n",
     "    axes[0].get_yaxis().set_ticks([])\n",
     "    axes[1].get_xaxis().set_ticks([])\n",
     "    axes[0].set_ylabel(ylabel)\n",
@@ -351,8 +352,8 @@
     "    plt.scatter(c * true_dopplers, resids, marker=\"o\", color=\"k\", alpha=0.9)\n",
     "    plt.xlim(-3.2e4, 3.2e4)\n",
     "    plt.ylim(-32., 32.)\n",
-    "    plt.xlabel(\"true Doppler shift $c\\,\\delta x$ (m/s)\")\n",
-    "    plt.ylabel(\"residual $c\\,(\\widehat{\\delta x} - \\delta x)$ (m/s)\")\n",
+    "    plt.xlabel(\"true radial velocity $v_r$ (m/s)\")\n",
+    "    plt.ylabel(\"residual $(\\widehat{v_r} - v_r)$ (m/s)\")\n",
     "plot_resids(c * (best_ccf_dopplers - true_dopplers))\n",
     "plt.title(\"naive (but normalized) cross-correlation estimates\")\n",
     "plt.savefig(\"ccfrvs.png\")"
@@ -411,6 +412,7 @@
    "outputs": [],
    "source": [
     "# get the ML RV for one epoch\n",
+    "j = 7\n",
     "llfs = ln_likelihood_function(dopplers, xs, ys[j], y_ivars_empirical[j])[0]\n",
     "ddp = np.arange(true_dopplers[j] - 0.5 / R, true_dopplers[j] + 0.5 / R, 0.01 / R)\n",
     "best_doppler, llp = hogg_parabola_trick(llfs, dopplers, ddp)\n",
@@ -448,10 +450,10 @@
    "outputs": [],
    "source": [
     "epochs = np.arange(len(true_dopplers))\n",
-    "plt.plot(epochs, c * true_dopplers, \"rx\", zorder=100, label=\"true Doppler shifts\")\n",
+    "plt.plot(epochs, c * true_dopplers, \"rx\", zorder=100, label=\"true radial velocities\")\n",
     "plt.plot(epochs, c * best_llf_dopplers, \"ko\", alpha=0.9, label=\"maximum-likelihood estimates\")\n",
     "plt.xlabel(\"epoch number\")\n",
-    "plt.ylabel(\"Doppler shift $c\\,\\delta x$ (km/s)\")\n",
+    "plt.ylabel(\"radial velocity $v_r$ (km/s)\")\n",
     "plt.title(\"Full toy-data dataset\")\n",
     "plt.legend()\n",
     "plt.savefig(\"full.png\")"
@@ -481,19 +483,24 @@
    "source": [
     "# define all the functions you need to do binary-mask operations and fitting\n",
     "\n",
-    "def deduplicate_mask(ls, ws):\n",
+    "def deduplicate_mask(ls, ws, hs):\n",
     "    \"\"\"\n",
     "    This might have to be run a few times!\n",
     "    \"\"\"\n",
-    "    dls, dws = ls.copy(), ws.copy()\n",
+    "    dls, dws, dhs = ls.copy(), ws.copy(), hs.copy()\n",
     "    for j in range(len(dls) - 1):\n",
     "        if (dls[j+1] - dls[j]) < 0.5 * (dws[j+1] + dws[j]):\n",
-    "            dls[j] = (dws[j+1] * dls[j+1] + dws[j] * dls[j]) / (dws[j+1] + dws[j])\n",
-    "            dws[j] = dws[j+1] + dws[j]\n",
-    "            dls[j+1] = -1.0\n",
-    "            dws[j+1] = 0.0\n",
+    "            m1, m0 = dws[j+1] * dhs[j+1], dws[j] * dhs[j]\n",
+    "            mnew = m1 + m0\n",
+    "            dls[j] = (m1 * dls[j+1] + m0 * dls[j]) / mnew\n",
+    "            wnew = max(dws[j+1], dws[j])\n",
+    "            dws[j] = wnew\n",
+    "            dhs[j] = mnew / wnew\n",
+    "            dls[j+1] = -1.\n",
+    "            dws[j+1] = 0.\n",
+    "            dhs[j+1] = 0.\n",
     "    good = dls > 0.\n",
-    "    return dls[good], dws[good]\n",
+    "    return dls[good], dws[good], dhs[good]\n",
     "\n",
     "def make_binary_mask(xs, lxs=line_xs, lews=line_ews, sigma=sigma_x):\n",
     "    \"\"\"\n",
@@ -507,13 +514,15 @@
     "    inside = (line_xs > np.min(xs) + margin) * \\\n",
     "             (line_xs < np.max(xs) - margin)\n",
     "    bmask_lines = 1. * lxs[strong * inside]\n",
-    "    bmask_widths = 0.25 * lews[strong * inside] # magic; made up\n",
+    "    bmask_widths = np.zeros_like(bmask_lines) + 0.6e-5 # MAGIC\n",
+    "    bmask_heights = lews[strong * inside] / bmask_widths\n",
     "    I = np.argsort(bmask_lines)\n",
     "    bmask_lines = bmask_lines[I]\n",
     "    bmask_widths = bmask_widths[I]\n",
-    "    bmask_lines, bmask_widths = deduplicate_mask(bmask_lines, bmask_widths)\n",
-    "    bmask_lines, bmask_widths = deduplicate_mask(bmask_lines, bmask_widths)\n",
-    "    return bmask_lines, bmask_widths\n",
+    "    bmask_heights = bmask_heights[I]\n",
+    "    bmask_lines, bmask_widths, bmask_heights = deduplicate_mask(bmask_lines, bmask_widths, bmask_heights)\n",
+    "    bmask_lines, bmask_widths, bmask_heights = deduplicate_mask(bmask_lines, bmask_widths, bmask_heights)\n",
+    "    return bmask_lines, bmask_widths, bmask_heights\n",
     "\n",
     "def discrete_cross_correlation(x1s, y1s, x2s, y2s):\n",
     "    \"\"\"\n",
@@ -528,10 +537,10 @@
     "    Because the binary mask is a discrete set of tiny windows, this operation\n",
     "    is done as a numerical integration, using `discrete_cross_correlation()`.\n",
     "    \"\"\"\n",
-    "    bmask_lines, bmask_widths = bmask\n",
+    "    bmask_lines, bmask_widths, bmask_heights = bmask\n",
     "    grid = np.arange(-0.5 + 0.5 / oversample, 0.5, 1.0 / oversample)\n",
     "    locations = (bmask_lines[:, None] + grid[None, :]).flatten()\n",
-    "    weights = (bmask_widths[:, None] * np.ones_like(grid)[None, :] / oversample).flatten()\n",
+    "    weights = (bmask_widths[:, None] * bmask_heights[:, None] * np.ones_like(grid)[None, :] / oversample).flatten()\n",
     "    bccfs = np.zeros_like(dopplers)\n",
     "    for i, doppler in enumerate(dopplers):\n",
     "        bccfs[i] = discrete_cross_correlation(locations + doppler, weights, xs, ys)\n",
@@ -592,27 +601,38 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(c * true_dopplers, j)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "id": "oNGARKlCogN_"
    },
    "outputs": [],
    "source": [
     "# visualize the binary mask\n",
+    "j = 7\n",
     "fig, axes = plt.subplots(2, 1, sharex=False, sharey=True)\n",
-    "bl, bw = bmask\n",
+    "bl, bw, bh = bmask\n",
+    "hmax = np.max(bh)\n",
     "for ax in axes:\n",
     "    ax.step(xs, ys[j], color=\"k\", where=\"mid\", alpha=0.9)\n",
     "    ax.set_ylabel(r\"flux $y$\")\n",
     "    ax.ticklabel_format(useOffset=False)\n",
-    "    for l, w in zip(bl, bw):\n",
-    "        ax.fill_between([l - 0.5 * w + best_doppler, l + 0.5 * w + best_doppler], [1., 1.],\n",
+    "    for l, w, h in zip(bl, bw, bh):\n",
+    "        ax.fill_between([l - 0.5 * w, l + 0.5 * w], [h/hmax, h/hmax],\n",
     "                        color=\"r\", alpha=0.25)\n",
     "    ax.axhline(0., color=\"r\", alpha=0.5, lw=0.5)\n",
     "axes[0].set_xlim(8.700, 8.701)\n",
     "axes[1].set_xlim(8.702, 8.703)\n",
     "axes[0].set_ylim(-0.1, 1.1)\n",
     "axes[1].set_xlabel(r\"ln wavelength $x=\\ln\\,\\lambda$\")\n",
-    "axes[0].set_title(\"epoch {}; $\\delta x = {:+f}$\".format(j, true_dopplers[j]))\n",
+    "axes[0].set_title(\"epoch {}; $v_r = {:+f}$\".format(j, c * true_dopplers[j]))\n",
     "fig.savefig(\"binarymask.png\")"
    ]
   },
@@ -625,6 +645,8 @@
    "outputs": [],
    "source": [
     "# get the binary-mask CCF at one epoch\n",
+    "j = 7\n",
+    "ddp = np.arange(true_dopplers[j] - 0.5 / R, true_dopplers[j] + 0.5 / R, 0.01 / R)\n",
     "bccs = ccf_with_binary_mask(dopplers, xs, ys[j], bmask)\n",
     "best_doppler, bccp = hogg_parabola_trick(-1. * bccs, dopplers, ddp)"
    ]
@@ -774,7 +796,7 @@
     "axes[1].set_xlim(8.702, 8.703)\n",
     "axes[0].set_ylim(-0.1, 1.1)\n",
     "axes[1].set_xlabel(r\"ln wavelength $x=\\ln\\,\\lambda$\")\n",
-    "axes[0].set_title(\"epoch {}; $\\delta x = {:+f}$\".format(j, true_dopplers[j]))\n",
+    "axes[0].set_title(\"epoch {}; $v_r = {:+f}$\".format(j, c * true_dopplers[j]))\n",
     "fig.savefig(\"empirical.png\")"
    ]
   },
@@ -955,7 +977,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -969,7 +991,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
