--- a/notebook/how_to_measure_RV.ipynb
+++ b/notebook/how_to_measure_RV.ipynb
@@ -15,8 +15,6 @@
     "- **Megan Bedell** (Flatiron)\n",
     "\n",
     "## To-Do:\n",
-    "- Reduce repeated code when it comes to plotting spectra (many things repeated).\n",
-    "- Fix formatting of v_r in plot titles? Include units there too?\n",
     "- Make sure everything is in terms of radial velocity v_r and not Doppler shift delta x."
    ]
   },
@@ -171,7 +169,7 @@
     "js = [3, 17]\n",
     "for j,ax in zip(js,axes):\n",
     "    ax.step(xs, ys[j], color=\"k\", where=\"mid\", alpha=0.9)\n",
-    "    ax.set_title(\"epoch {}; $v_r = {:+f}$\".format(j, c * true_dopplers[j]))\n",
+    "    ax.set_title(\"epoch {}; $v_r = {:+7.1f}$ m/s\".format(j, c * true_dopplers[j]))\n",
     "    ax.set_ylabel(r\"flux $y$\")\n",
     "ax.set_xlabel(r\"ln wavelength $x=\\ln\\,\\lambda$\")\n",
     "plt.xlim(x_min, x_max)\n",
@@ -188,19 +186,22 @@
    "outputs": [],
    "source": [
     "# zoom in on one epoch and compare it to the true template.\n",
-    "j = 7\n",
-    "fig, axes = plt.subplots(2, 1, sharex=False, sharey=True)\n",
+    "def plotspec(j):\n",
+    "    fig, axes = plt.subplots(2, 1, sharex=False, sharey=True)\n",
+    "    for ax in axes:\n",
+    "        ax.step(xs, ys[j], color=\"k\", where=\"mid\", alpha=0.9)\n",
+    "        ax.set_ylabel(r\"flux $y$\")\n",
+    "        ax.ticklabel_format(useOffset=False)\n",
+    "    axes[0].set_xlim(8.700, 8.701)\n",
+    "    axes[1].set_xlim(8.702, 8.703)\n",
+    "    axes[0].set_ylim(-0.1, 1.1)\n",
+    "    axes[1].set_xlabel(r\"ln wavelength $x=\\ln\\,\\lambda$\")\n",
+    "    axes[0].set_title(\"epoch {}; $v_r = {:+7.1f}$ m/s\".format(j, c * true_dopplers[j]))\n",
+    "    return fig, axes\n",
+    "ff, axes = plotspec(7)\n",
     "for ax in axes:\n",
-    "    ax.step(xs, ys[j], color=\"k\", where=\"mid\", alpha=0.9)\n",
-    "    ax.set_ylabel(r\"flux $y$\")\n",
-    "    ax.plot(xs, true_spectrum(xs, 0.), \"r-\", alpha=0.5, lw=1)\n",
-    "    ax.ticklabel_format(useOffset=False)\n",
-    "axes[0].set_xlim(8.700, 8.701)\n",
-    "axes[1].set_xlim(8.702, 8.703)\n",
-    "axes[0].set_ylim(-0.1, 1.1)\n",
-    "axes[1].set_xlabel(r\"ln wavelength $x=\\ln\\,\\lambda$\")\n",
-    "axes[0].set_title(\"epoch {}; $v_r = {:+f}$\".format(j, c * true_dopplers[j]))\n",
-    "fig.savefig(\"datazoom.png\")"
+    "    ax.plot(xs, true_spectrum(xs, 0.), \"r-\", alpha=0.5, lw=1, zorder=100)\n",
+    "ff.savefig(\"datazoom.png\")"
    ]
   },
   {
@@ -453,7 +454,7 @@
     "plt.plot(epochs, c * true_dopplers, \"rx\", zorder=100, label=\"true radial velocities\")\n",
     "plt.plot(epochs, c * best_llf_dopplers, \"ko\", alpha=0.9, label=\"maximum-likelihood estimates\")\n",
     "plt.xlabel(\"epoch number\")\n",
-    "plt.ylabel(\"radial velocity $v_r$ (km/s)\")\n",
+    "plt.ylabel(\"radial velocity $v_r$ (m/s)\")\n",
     "plt.title(\"Full toy-data dataset\")\n",
     "plt.legend()\n",
     "plt.savefig(\"full.png\")"
@@ -601,15 +602,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(c * true_dopplers, j)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "metadata": {
     "id": "oNGARKlCogN_"
    },
@@ -617,23 +609,15 @@
    "source": [
     "# visualize the binary mask\n",
     "j = 7\n",
-    "fig, axes = plt.subplots(2, 1, sharex=False, sharey=True)\n",
+    "ff, axes = plotspec(7)\n",
     "bl, bw, bh = bmask\n",
     "hmax = np.max(bh)\n",
     "for ax in axes:\n",
-    "    ax.step(xs, ys[j], color=\"k\", where=\"mid\", alpha=0.9)\n",
-    "    ax.set_ylabel(r\"flux $y$\")\n",
-    "    ax.ticklabel_format(useOffset=False)\n",
     "    for l, w, h in zip(bl, bw, bh):\n",
     "        ax.fill_between([l - 0.5 * w, l + 0.5 * w], [h/hmax, h/hmax],\n",
-    "                        color=\"r\", alpha=0.25)\n",
+    "                        color=\"r\", alpha=0.25, zorder=100)\n",
     "    ax.axhline(0., color=\"r\", alpha=0.5, lw=0.5)\n",
-    "axes[0].set_xlim(8.700, 8.701)\n",
-    "axes[1].set_xlim(8.702, 8.703)\n",
-    "axes[0].set_ylim(-0.1, 1.1)\n",
-    "axes[1].set_xlabel(r\"ln wavelength $x=\\ln\\,\\lambda$\")\n",
-    "axes[0].set_title(\"epoch {}; $v_r = {:+f}$\".format(j, c * true_dopplers[j]))\n",
-    "fig.savefig(\"binarymask.png\")"
+    "ff.savefig(\"binarymask.png\")"
    ]
   },
   {
@@ -785,19 +769,11 @@
    "outputs": [],
    "source": [
     "# zoom in on one epoch and compare it to the template.\n",
-    "fig, axes = plt.subplots(2, 1, sharex=False, sharey=True)\n",
+    "ff, axes = plotspec(7)\n",
     "for ax in axes:\n",
-    "    ax.step(xs, ys[j], color=\"k\", where=\"mid\", alpha=0.9)\n",
-    "    ax.set_ylabel(r\"flux $y$\")\n",
     "    ax.plot(xs, np.mean(empirical_spectra(xs, 0., ys, true_dopplers), axis=0), \"r-\",\n",
     "            alpha=0.5, lw=1)\n",
-    "    ax.ticklabel_format(useOffset=False)\n",
-    "axes[0].set_xlim(8.700, 8.701)\n",
-    "axes[1].set_xlim(8.702, 8.703)\n",
-    "axes[0].set_ylim(-0.1, 1.1)\n",
-    "axes[1].set_xlabel(r\"ln wavelength $x=\\ln\\,\\lambda$\")\n",
-    "axes[0].set_title(\"epoch {}; $v_r = {:+f}$\".format(j, c * true_dopplers[j]))\n",
-    "fig.savefig(\"empirical.png\")"
+    "ff.savefig(\"empirical.png\")"
    ]
   },
   {
