figure tweaks; units

--- a/notebook/how_to_measure_RV.ipynb
+++ b/notebook/how_to_measure_RV.ipynb
@@ -169,7 +169,8 @@
     "js = [3, 17]\n",
     "for j,ax in zip(js,axes):\n",
     "    ax.step(xs, ys[j], color=\"k\", where=\"mid\", alpha=0.9)\n",
-    "    ax.set_title(\"epoch {}; $v_r = {:+7.1f}$ m/s\".format(j, c * true_dopplers[j]))\n",
+    "    ax.set_title(\"epoch {}; $v_r = {:+7.1f}\".format(j, c * true_dopplers[j])\n",
+    "                 + r\"~\\mathrm{m\\,s^{-1}}$\")\n",
     "    ax.set_ylabel(r\"flux $y$\")\n",
     "ax.set_xlabel(r\"ln wavelength $x=\\ln\\,\\lambda$\")\n",
     "plt.xlim(x_min, x_max)\n",
@@ -196,7 +197,8 @@
     "    axes[1].set_xlim(8.702, 8.703)\n",
     "    axes[0].set_ylim(-0.1, 1.1)\n",
     "    axes[1].set_xlabel(r\"ln wavelength $x=\\ln\\,\\lambda$\")\n",
-    "    axes[0].set_title(\"epoch {}; $v_r = {:+7.1f}$ m/s\".format(j, c * true_dopplers[j]))\n",
+    "    axes[0].set_title(\"epoch {}; $v_r = {:+7.1f}\".format(j, c * true_dopplers[j])\n",
+    "                 + r\"~\\mathrm{m\\,s^{-1}}$\")\n",
     "    return fig, axes\n",
     "ff, axes = plotspec(7)\n",
     "for ax in axes:\n",
@@ -313,7 +315,7 @@
     "        ax.plot(c * dopplers, ccs, \"k.\", alpha=0.9)\n",
     "    axes[0].set_xlim(-3.2e4, 3.2e4)\n",
     "    axes[1].set_xlim(c * doppler - 3000., c * doppler + 3000.)\n",
-    "    axes[0].set_xlabel(r\"radial velocity $v_r$ (m/s)\")\n",
+    "    axes[0].set_xlabel(r\"radial velocity $v_r$ ($\\mathrm{m\\,s^{-1}}$)\")\n",
     "    axes[0].get_yaxis().set_ticks([])\n",
     "    axes[1].get_xaxis().set_ticks([])\n",
     "    axes[0].set_ylabel(ylabel)\n",
@@ -353,8 +355,8 @@
     "    plt.scatter(c * true_dopplers, resids, marker=\"o\", color=\"k\", alpha=0.9)\n",
     "    plt.xlim(-3.2e4, 3.2e4)\n",
     "    plt.ylim(-32., 32.)\n",
-    "    plt.xlabel(\"true radial velocity $v_r$ (m/s)\")\n",
-    "    plt.ylabel(\"residual $(\\widehat{v_r} - v_r)$ (m/s)\")\n",
+    "    plt.xlabel(\"true radial velocity $v_r$ ($\\mathrm{m\\,s^{-1}}$)\")\n",
+    "    plt.ylabel(\"residual $(\\widehat{v_r} - v_r)$ ($\\mathrm{m\\,s^{-1}}$)\")\n",
     "plot_resids(c * (best_ccf_dopplers - true_dopplers))\n",
     "plt.title(\"naive (but normalized) cross-correlation estimates\")\n",
     "plt.savefig(\"ccfrvs.png\")"
@@ -454,7 +456,7 @@
     "plt.plot(epochs, c * true_dopplers, \"rx\", zorder=100, label=\"true radial velocities\")\n",
     "plt.plot(epochs, c * best_llf_dopplers, \"ko\", alpha=0.9, label=\"maximum-likelihood estimates\")\n",
     "plt.xlabel(\"epoch number\")\n",
-    "plt.ylabel(\"radial velocity $v_r$ (m/s)\")\n",
+    "plt.ylabel(\"radial velocity $v_r$ ($\\mathrm{m\\,s^{-1}}$)\")\n",
     "plt.title(\"Full toy-data dataset\")\n",
     "plt.legend()\n",
     "plt.savefig(\"full.png\")"
