Updates from Overleaf

--- a/paper/main.tex
+++ b/paper/main.tex
@@ -11,7 +11,7 @@
 % - Make an acronym command and fix CLRB, RV, and all other acronyms.
 % - Be sure to discuss SNR in a continuum resolution element, as well as in a pixel.
 %.- Make sure that, for any assumption that is explicitly tested, the forthcoming test is mentioned when the assumption is introduced.
-% - Are we consistent in our use of Doppler shift, radial velocity, and redshift and so on? Fix figure captions so the figures are clearly in RV. Edit radial Doppler assumption section to say that the terms are interchangeable unless the star is moving relativistically (which it's not). cite Wright-group paper.
+% - Are we consistent in our use of Doppler shift, radial velocity, and redshift and so on? Fix figure captions so the figures are clearly in RV. Edit radial Doppler assumption section to say that the terms are interchangeable unless the star is moving relativistically (which it's not). cite Wright-group paper. Make it clear that for US, RV *is* the same as c * dx.
 % - Do we address the relationship between our tiny spectral segment and a full spectrograph? Get scalings. Etc. Possibly we should ask Daunt to give us a realistic spectral segment?
 % - Make sure we are explicit about what we are assuming that we know when we fit the CCF with a Gaussian.
 % - Make sure all figures are explicitly referred to in the text.
